--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,19 @@
   "dependencies": {
     "polymer": "Polymer/polymer#~0.4.1",
     "core-elements": "Polymer/core-elements#~0.4.1",
-    "paper-elements": "Polymer/paper-elements#~0.4.1"
+    "paper-elements": "Polymer/paper-elements#~0.4.1",
+    "sortable-table": "~0.9.1",
+    "x-tag-datepicker": "x-tag/datepicker#master",
+    "polymer-date-picker": "~0.0.11",
+    "geodan-polymer": "https://github.com/Geodan/geodan-polymer.git",
+    "crossfilter": "~1.3.11",
+    "nvd3": "~1.1.15-beta",
+    "queue-async": "https://github.com/mbostock/queue.git#~1.0.7"
+  },
+  "resolutions": {
+    "polymer": "^0.4.0",
+    "platform": ">=0.4.0",
+    "core-component-page": "^0.4.0",
+    "d3": "~3.4.11"
   }
 }
