--- a/bower.json
+++ b/bower.json
@@ -23,21 +23,21 @@
     "tests"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#~0.4.1",
-    "core-elements": "Polymer/core-elements#~0.4.1",
-    "paper-elements": "Polymer/paper-elements#~0.4.1",
+    "polymer": "Polymer/polymer#~0.5.2",
+    "core-elements": "Polymer/core-elements#~0.5.2",
+    "paper-elements": "Polymer/paper-elements#~0.5.2",
     "sortable-table": "~0.9.1",
     "x-tag-datepicker": "x-tag/datepicker#master",
     "polymer-date-picker": "~0.0.11",
     "geodan-polymer": "https://github.com/Geodan/geodan-polymer.git",
     "crossfilter": "~1.3.11",
-    "nvd3": "~1.1.15-beta",
-    "queue-async": "https://github.com/mbostock/queue.git#~1.0.7"
+    "queue-async": "https://github.com/mbostock/queue.git#~1.0.7",
+    "d3-plugins": "*",
+    "underscore": "~1.7.0",
+    "nvd3-community": "~1.7.0"
   },
   "resolutions": {
-    "polymer": "^0.4.0",
-    "platform": ">=0.4.0",
-    "core-component-page": "^0.4.0",
-    "d3": "~3.4.11"
+    "polymer": "^0.5.0",
+    "d3": "^3.4.12"
   }
 }
