--- a/bower.json
+++ b/bower.json
@@ -38,6 +38,7 @@
   },
   "resolutions": {
     "polymer": "^0.5.0",
-    "d3": "^3.4.12"
+    "d3": "^3.4.12",
+    "sortable-table": "~0.11.0"
   }
 }
